--- a/sass/pages/_cuisine.scss
+++ b/sass/pages/_cuisine.scss
@@ -7,8 +7,8 @@
 
     &__hero {
         background-image: image-set(
-        url(../img/menu-header.png) 1x,
-        url(../img/menu-header@2x.png) 2x);
+        url(../../img/menu-header.png) 1x,
+        url(../../img/menu-header@2x.png) 2x);
         height: 50rem;
         background-position: center;
         background-size: cover;
