--- a/sass/pages/_room.scss
+++ b/sass/pages/_room.scss
@@ -7,8 +7,8 @@
 
     &__hero {
         background-image: image-set(
-        url(../../img/oheya-header.png) 1x,
-        url(../../img/oheya-header@2x.png) 2x);
+        url(../img/oheya-header.png) 1x,
+        url(../img/oheya-header@2x.png) 2x);
         height: 50rem;
         background-position: center;
         background-size: cover;
@@ -79,7 +79,7 @@
     }
 
     &__child {
-        background-image: url(../../img/bg.png);
+        background-image: url(../img/bg.png);
         width: 81.3rem;
         height: 38.1rem;
         position: absolute;
