--- a/sass/pages/_room.scss
+++ b/sass/pages/_room.scss
@@ -7,8 +7,8 @@
 
     &__hero {
         background-image: image-set(
-        url(../img/oheya-header.png) 1x,
-        url(../img/oheya-header@2x.png) 2x);
+        url(img/oheya-header.png) 1x,
+        url(img/oheya-header@2x.png) 2x);
         height: 50rem;
         background-position: center;
         background-size: cover;
