--- a/sass/layout/_access.scss
+++ b/sass/layout/_access.scss
@@ -1,7 +1,7 @@
 .access {
     padding-left: 2rem;
     padding-right: 2rem;
-    background-image: url(../../img/bg.png);
+    background-image: url(img/bg.png);
     background-position: center;
     background-size: cover;
     width: 100%;
