--- a/sass/layout/_plan.scss
+++ b/sass/layout/_plan.scss
@@ -2,8 +2,8 @@
     padding-left: 2rem;
     padding-right: 2rem;
     background-image: image-set(
-        url(../../img/bg2.png) 1x,
-        url(../../img/bg2@2x.png) 2x);
+        url(img/bg2.png) 1x,
+        url(img/bg2@2x.png) 2x);
     background-position: center;
     background-size: cover;
     width: 100%;
