--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,8 +4,8 @@
         height: 52.2rem;
         width: 100%;
         background-image: image-set(
-            url(bg3.png) 1x,
-            url(bg3@2x.png) 2x);
+            url(../img/bg3.png) 1x,
+            url(../img/bg3@2x.png) 2x);
     }
 
     &__link {
