--- a/sass/layout/_japanese.scss
+++ b/sass/layout/_japanese.scss
@@ -86,7 +86,7 @@
 }
 
 .japanese__decoration {
-    background: url(bg.png);
+    background: url(../img/bg.png);
     background-position: center;
     background-size: cover;
     height: 68.1rem;
